Removed lintlizard from config file, bumped config Python version to 3.7

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,6 @@ require-code=True
 
 [isort]
 skip=venv
-known_first_party=lintlizard
 known_tests=tests
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
 default_section=THIRDPARTY
@@ -62,7 +61,7 @@ line_length=79
 float_to_top=True
 
 [mypy]
-python_version = 3.6
+python_version = 3.7
 ignore_missing_imports = True
 no_implicit_optional = True
 strict_equality = True
@@ -70,4 +69,4 @@ follow_imports = skip
 warn_unreachable = True
 show_error_context = True
 pretty = True
-files = lintlizard
+files = scripts
